# cuda-stride-benchmark

./: CMakeLists.txt  README.md  sbatch_taurus.sh  sbatch_taurus_k80.sh
results/GV100/cuda-9.2.88/: reduction-grid-1327mhz.csv  reduction-mono-1327mhz.csv  saxpy-grid-1327mhz.csv  saxpy-mono-1327mhz.csv
results/K80/: sbatch_taurus.sh
results/K80/cuda-9.0.176/: reduction-grid-823mhz.csv  reduction-mono-823mhz.csv  saxpy-grid-823mhz.csv  saxpy-mono-823mhz.csv
results/K80/cuda-9.2.88/: reduction-cub-823mhz.csv  reduction-grid-823mhz.csv  reduction-mono-823mhz.csv  saxpy-grid-823mhz.csv  saxpy-mono-823mhz.csv
results/P100-PCIE-16GB/cuda-9.2.88/: reduction-grid-1189mhz.csv  reduction-mono-1189mhz.csv  saxpy-grid-1189mhz.csv  saxpy-mono-1189mhz.csv
results/V100-PCIE-16GB/cuda-9.2.88/: reduction-grid-1245mhz.csv  reduction-mono-1245mhz.csv  saxpy-grid-1245mhz.csv  saxpy-mono-1245mhz.csv
src/: CMakeLists.txt  app_helper.hpp  cuda_helper.cuh  matmul.cu  matmul_cublas.cpp  reduction-cub.cu  reduction-grid.cu  reduction-mono.cu  reduction-thrust.cu  saxpy-grid.cu  saxpy-mono.cu
supplemental/: test-run.sh
supplemental/rshiny/: app.r  helper.r
supplemental/rshiny/www/: simplex.min.css
